WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74035
Editor::markAndReplaceFor should take Range instead of TextCheckingParagraph.
https://bugs.webkit.org/show_bug.cgi?id=74035
Summary
Editor::markAndReplaceFor should take Range instead of TextCheckingParagraph.
Shinya Kawanaka
Reported
2011-12-07 16:21:08 PST
To merge asynchronous path and synchronous path of spellchecking, markAndReplaceFor should take Range instead of TextCheckingParagraph.
Attachments
Patch
(13.31 KB, patch)
2011-12-07 16:56 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(13.48 KB, patch)
2011-12-07 18:07 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2011-12-07 16:56:01 PST
Created
attachment 118288
[details]
Patch
Hajime Morrita
Comment 2
2011-12-07 17:48:43 PST
Comment on
attachment 118288
[details]
Patch Looks nice. You can now remove the forward declaration of TextCheckingParagraph in Editor.h
Shinya Kawanaka
Comment 3
2011-12-07 18:07:56 PST
Created
attachment 118300
[details]
Patch
WebKit Review Bot
Comment 4
2011-12-07 20:26:02 PST
Comment on
attachment 118300
[details]
Patch Clearing flags on attachment: 118300 Committed
r102307
: <
http://trac.webkit.org/changeset/102307
>
WebKit Review Bot
Comment 5
2011-12-07 20:26:06 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug