Editor::markAndReplaceFor should take Range instead of TextCheckingParagraph. https://bugs.webkit.org/show_bug.cgi?id=74035

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-12-07
Reviewed by Hajime Morita.

Editor::markAndReplaceFor takes chekcing range and paragraph range instead of
spelling paragraph and grammar paragraph.

No new tests. Covered by existing tests.

* editing/Editor.cpp:
(WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges):
(WebCore::Editor::markAndReplaceFor):
* editing/Editor.h:
* editing/TextCheckingHelper.cpp:
(WebCore::TextCheckingParagraph::TextCheckingParagraph):
* editing/TextCheckingHelper.h:

Canonical link: https://commits.webkit.org/90722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102307 268f45cc-cd09-0410-ab3c-d52691b4dbfc